# Proiect-SO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sentence-counter.sh
c/include/: bmp_transform.h  generals.h  process_directory.h  statistics.h
c/src/: bmp_transform.c  generals.c  main.c  process_directory.c  statistics.c
c/test/: CMakeLists.txt
c/test/ValidateArgs/: CMakeLists.txt  test_ArgsGoodValues.c  test_ArgsNoExtension.c  test_ArgsNotDirectory.c  test_ArgsWrongExtension.c  test_ArgsWrongNumberOfArgs.c
c/test/ValidateWriteStatistics/: CMakeLists.txt  test_FileNoReadPermission.c  test_FileNotExists.c  test_GoodBmp.c  test_StatsFileNoReadPermission.c  test_StatsFileNotExists.c  test_StatsGoodBmp.c  test_StatsGoodDirectory.c  test_StatsGoodRegularFile.c  test_StatsGoodSymlink.c
c/test/ValidateWriteStatistics/resources-test/: good-bmp-statistics.txt  good-directory-statistics.txt  good-regular-file-statistics.txt  good-symlink-statistics.txt  link-bmp
include/: file_type.h  generals.h  grayscale_filter.h  process_directory.h  process_file.h  statistics.h
resources/: link-image  some-text.txt  text.txt
src/: file_type.c  generals.c  grayscale_filter.c  main.c  process_directory.c  process_file.c  statistics.c
